# python-semver-project

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  codecov.yaml  mkdocs.yml  pyproject.toml  test.sh
.devcontainer/: devcontainer.json
.github/actions/environment/: action.yml
.github/workflows/: main.yml  on-release-main.yml  publish-main.yml  release.yml
docs/: index.md  modules.md
modern_python_project_template/: foo.py
templates/: CHANGELOG.md.j2
tests/: test_foo.py
tests/.pytest_cache/v/cache/: nodeids
