[tool.poetry]
name = "modern_python_project_template"
version = "0.4.10"
description = "This is a template repository for Python projects that use Poetry for their dependency management."
authors = ["Nick Ferguson <me@nickferguson.dev>"]
repository = "https://github.com/NickCrew/modern-python-project-template"
documentation = "https://NickCrew.github.io/modern-python-project-template/"
readme = "README.md"
packages = [
  {include = "modern_python_project_template"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ruff = "^0.4.9"

[tool.poetry.group.release.dependencies]
python-semantic-release = "^9.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]

branch = "main"
build_command = "poetry run ruff check && poetry run pytest"